Putting a function in a separate file

--- a/src/index.html
+++ b/src/index.html
@@ -613,5 +613,6 @@
       <div class="overlapping"></div>
     </main>
     <script src="./js/script.js"></script>
+    <script src="./js/nthFibo.js"></script>
   </body>
 </html>
